--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
     />
 
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
     <title>Cean Day</title>
@@ -71,10 +74,12 @@
         class="rounded-circle img-thumbnail"
       />
       <h1 class="display-4 fw-bold">Cean Dhea Safitri</h1>
-      <p class="lead">Koto Tengah | 31 Januari 2007</p>
+      <p class="lead"></p>
       <figure>
-        <figcaption class="mb-2">Play musiknya dulu ya ayang</figcaption>
-        <audio controls>
+        <figcaption class="mb-2" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="2500">
+          Play musiknya dulu ya ayang
+        </figcaption>
+        <audio controls data-aos="fade-in" data-aos-duration="1000" data-aos-delay="3000">
           <source src="audio/SUT.mp3" type="audio/mpeg" />
         </audio>
       </figure>
@@ -97,14 +102,14 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right" data-aos-duration="1000">
             <p>
               Cean, Cian, Cee, Dhea, Dheyy, Fitri. Itulan nama-nama yang sering menjadi panggilan
               sehari-hari untuk sipaling cantik, manis, imut, segalanya deh. Yaa dia adalah Cean
               Dhea Safitri.
             </p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
             <p>
               Cean lahir pada hari rabu, 31 Januari 2007. Dari ibunda yang bernama Ibuk Ice Trisna
               dan Bapak Anardin. Cean termasuk anak yang sedikit manja. Apalagi kepadakuu. Sekarang
@@ -137,7 +142,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-duration="1000">
             <div class="card">
               <img src="img/CR 1.jpg" class="card-img-top" alt="fotogabut1" />
               <div class="card-body">
@@ -148,7 +153,12 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div
+            class="col-md-4 mb-3"
+            data-aos="flip-left"
+            data-aos-duration="1000"
+            data-aos-delay="50"
+          >
             <div class="card">
               <img src="img/CR 2.jpg" class="card-img-top" alt="fotogabut2" />
               <div class="card-body">
@@ -156,7 +166,12 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div
+            class="col-md-4 mb-3"
+            data-aos="flip-left"
+            data-aos-duration="1000"
+            data-aos-delay="100"
+          >
             <div class="card">
               <img src="img/CR 3.jpg" class="card-img-top" alt="fotogabut3" />
               <div class="card-body">
@@ -164,7 +179,12 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div
+            class="col-md-4 mb-3"
+            data-aos="flip-left"
+            data-aos-duration="1000"
+            data-aos-delay="150"
+          >
             <div class="card">
               <img src="img/CR 4.jpg" class="card-img-top" alt="fotogabut4" />
               <div class="card-body">
@@ -172,7 +192,12 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div
+            class="col-md-4 mb-3"
+            data-aos="flip-left"
+            data-aos-duration="1000"
+            data-aos-delay="200"
+          >
             <div class="card">
               <img src="img/CR 5.jpg" class="card-img-top" alt="fotogabut5" />
               <div class="card-body">
@@ -180,7 +205,12 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div
+            class="col-md-4 mb-3"
+            data-aos="flip-left"
+            data-aos-duration="1000"
+            data-aos-delay="250"
+          >
             <div class="card">
               <img src="img/CR 6.jpg" class="card-img-top" alt="fotogabut6" />
               <div class="card-body">
@@ -278,6 +308,22 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({});
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to(".lead", { duration: 2, delay: 1.5, text: "Koto Tengah | 31 Januari 2007" });
+      gsap.from(".jumbotron img", { duration: 1.5, rotateY: 360, opacity: 0 });
+      gsap.from(".navbar", { duration: 1.5, y: "-100%", opacity: 0, ease: "bounce" });
+      gsap.from(".display-4", { duration: 1, x: -50, opacity: 0, delay: 0.5, ease: "back" });
+    </script>
+
     <script>
       const scriptURL =
         "https://script.google.com/macros/s/AKfycbya4kudBkrIS5wJFX2pNnIYOGmHK39NCgB0Mu4uY3AZBJze9Gqjg5Lv4D2hszlvExox/exec";
